fix input type range appearance on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,19 @@ body {
 }
 
 .input-range-reset {
-  -webkit-appearance: none;
+  appearance: none;
   background: transparent;
 }
 
 .input-range-reset::-webkit-slider-thumb {
-  -webkit-appearance: none;
+  appearance: none;
+  width: 0;
+  height: 0;
+}
+
+.input-range-reset::-moz-range-thumb {
+  appearance: none;
+  border: 0;
   width: 0;
   height: 0;
 }
